--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "foxy-authentication",
+    "name": "carbon-fox",
     "version": "0.0.0",
     "author": "Andrew Aldridge <i80and@foxquill.com>",
     "dependencies": {
