--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "author": "Andrew Aldridge <i80and@foxquill.com>",
     "dependencies": {
+        "mocha": "1.21.4",
         "browserify": ">= 5.11.0",
         "uglify-js": ">= 2.4.15",
         "jshint": ">= 2.5.5"
