--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "carbon-fox",
-    "version": "0.0.0",
-    "author": "Andrew Aldridge <i80and@foxquill.com>",
-    "dependencies": {
-        "browserify": "9.0.3",
-        "uglify-js": "2.4.10",
-        "babel": "4.7.16",
-        "babelify": "5.0.4",
-        "jshint": "2.6.3"
-    },
-    "private": true,
-    "webide": {
-        "prepackage": "make",
-        "packageDir": "./build"
-    }
+  "name": "carbon-fox",
+  "version": "0.0.0",
+  "author": "Andrew Aldridge <i80and@foxquill.com>",
+  "dependencies": {
+    "babel": "4.7.16",
+    "babelify": "5.0.4",
+    "browserify": "9.0.3",
+    "jshint": "2.6.3",
+    "uglify-js": "2.4.10"
+  },
+  "private": true,
+  "webide": {
+    "prepackage": "make",
+    "packageDir": "./build"
+  }
 }
