--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "author": "Andrew Aldridge <i80and@foxquill.com>",
   "dependencies": {
-    "babel": "5.0.0",
-    "babelify": "6.0.2",
-    "browserify": "9.0.7",
-    "jshint": "2.6.3",
-    "uglify-js": "2.4.19"
+    "babel": "6.1",
+    "babel-cli": "6.2",
+    "babelify": "6.4",
+    "browserify": "12.0",
+    "jshint": "2.8",
+    "uglify-js": "2.6"
   },
   "private": true,
   "webide": {
